--- a/.github/workflows/sims_integrated.yml
+++ b/.github/workflows/sims_integrated.yml
@@ -3,52 +3,15 @@ name: sims_integrated
 on:
   workflow_dispatch:
     inputs:
-      DATE:
-        description: "YYYYMMDD"
-        required: true
-        type: string
-      PID:
-        description: "場コード 01..24（カンマ可）"
-        required: true
-        type: string
-      MODE:
-        description: "predict or eval"
-        required: true
-        default: "predict"
-        type: choice
-        options:
-          - predict
-          - eval
-      SIMS:
-        description: "試行回数/レース"
-        required: true
-        default: "600"
-        type: string
-      TOPN:
-        description: "三連単 TOPN"
-        required: true
-        default: "18"
-        type: string
-      UNIT:
-        description: "1点あたり(円)"
-        required: true
-        default: "100"
-        type: string
-      FILTERS:
-        description: "例: require_odds=true,min_ev=1.2,odds_bands=01-09,10-19,exclude_first1=false,only_first1=false,buy_in_top3=false,buy_thr=0.7"
-        required: false
-        default: ""
-        type: string
-      KEYMAN:
-        description: "例: enable=true,thr=0.7,boost=0.15,aggr=0.0,buy_in_top3=false,buy_thr=0.7"
-        required: false
-        default: "enable=true,thr=0.7,boost=0.15,aggr=0.0,buy_in_top3=false,buy_thr=0.7"
-        type: string
-      OUTDIR:
-        description: "出力ディレクトリ"
-        required: false
-        default: "scripts/sims"
-        type: string
+      DATE:   { description: "YYYYMMDD", required: true,  type: string }
+      PID:    { description: "場コード 01..24（カンマ可）", required: true, type: string }
+      MODE:   { description: "predict or eval", required: true, default: "predict", type: choice, options: [predict, eval] }
+      SIMS:   { description: "試行回数/レース", required: true, default: "600", type: string }
+      TOPN:   { description: "三連単 TOPN", required: true, default: "18", type: string }
+      UNIT:   { description: "1点あたり(円)", required: true, default: "100", type: string }
+      FILTERS: { description: "例: require_odds=true,min_ev=1.2,odds_bands=01-09,10-19", required: false, default: "", type: string }
+      KEYMAN:  { description: "例: enable=true,thr=0.7,boost=0.15,aggr=0.0,buy_in_top3=false,buy_thr=0.7", required: false, default: "enable=true,thr=0.7,boost=0.15,aggr=0.0,buy_in_top3=false,buy_thr=0.7", type: string }
+      OUTDIR:  { description: "出力ディレクトリ", required: false, default: "scripts/sims", type: string }
 
 permissions:
   contents: write
@@ -71,9 +34,9 @@ jobs:
 
       - name: Install deps
         run: |
+          set -e
           python -m pip install --upgrade pip
-          # SimS + TENKAI 推論で使う主要ライブラリ
-          pip install numpy pandas scikit-learn joblib lightgbm pyarrow
+          pip install numpy pandas joblib
 
       - name: Parse FILTERS & KEYMAN
         id: parse
@@ -83,48 +46,40 @@ jobs:
         run: |
           set -euo pipefail
           parse_kvlist () {
-            # usage: parse_kvlist "a=1,b=2,c=3" PREFIX
-            local s="${1:-}"; local prefix="${2:-}"
+            local s="$1"; local prefix="$2"
             IFS=',' read -r -a pairs <<< "$s"
             for kv in "${pairs[@]}"; do
-              kv="$(echo "$kv" | xargs)"
-              [ -z "$kv" ] && continue
+              kv="$(echo "$kv" | xargs)"; [ -z "$kv" ] && continue
               if [[ "$kv" == *"="* ]]; then
                 k="$(echo "${kv%%=*}" | tr '[:lower:]' '[:upper:]' | tr -c 'A-Z0-9_' '_' | xargs)"
                 v="$(echo "${kv#*=}" | xargs)"
-                echo "$prefix$k=$v" >> "$GITHUB_OUTPUT"
+                echo "$prefix$k=$v" >> $GITHUB_OUTPUT
               fi
             done
           }
-
-          # Defaults for filters (overridable)
-          echo "F_REQUIRE_ODDS=false" >> "$GITHUB_OUTPUT"
-          echo "F_MIN_EV=0"          >> "$GITHUB_OUTPUT"
-          echo "F_ODDS_BANDS="       >> "$GITHUB_OUTPUT"
-          echo "F_ODDS_MIN=0"        >> "$GITHUB_OUTPUT"
-          echo "F_ODDS_MAX=0"        >> "$GITHUB_OUTPUT"
-          echo "F_EXCLUDE_FIRST1=false" >> "$GITHUB_OUTPUT"
-          echo "F_ONLY_FIRST1=false"    >> "$GITHUB_OUTPUT"
-          echo "F_BUY_IN_TOP3=false"    >> "$GITHUB_OUTPUT"
-          echo "F_BUY_THR=0.7"          >> "$GITHUB_OUTPUT"
-
-          # Defaults for keyman pack
-          echo "K_ENABLE=true"  >> "$GITHUB_OUTPUT"
-          echo "K_THR=0.7"      >> "$GITHUB_OUTPUT"
-          echo "K_BOOST=0.15"   >> "$GITHUB_OUTPUT"
-          echo "K_AGGR=0.0"     >> "$GITHUB_OUTPUT"
-
+          echo "F_REQUIRE_ODDS=false"  >> $GITHUB_OUTPUT
+          echo "F_MIN_EV=0"            >> $GITHUB_OUTPUT
+          echo "F_ODDS_BANDS="         >> $GITHUB_OUTPUT
+          echo "F_ODDS_MIN=0"          >> $GITHUB_OUTPUT
+          echo "F_ODDS_MAX=0"          >> $GITHUB_OUTPUT
+          echo "F_EXCLUDE_FIRST1=false">> $GITHUB_OUTPUT
+          echo "F_ONLY_FIRST1=false"   >> $GITHUB_OUTPUT
+          echo "F_BUY_IN_TOP3=false"   >> $GITHUB_OUTPUT
+          echo "F_BUY_THR=0.7"         >> $GITHUB_OUTPUT
+          echo "K_ENABLE=true"         >> $GITHUB_OUTPUT
+          echo "K_THR=0.7"             >> $GITHUB_OUTPUT
+          echo "K_BOOST=0.15"          >> $GITHUB_OUTPUT
+          echo "K_AGGR=0.0"            >> $GITHUB_OUTPUT
           [ -n "${FILTERS:-}" ] && parse_kvlist "$FILTERS" "F_"
           [ -n "${KEYMAN:-}" ]  && parse_kvlist "$KEYMAN"  "K_"
 
-      # 1) Pass1: キーマン抽出（predict-only）
       - name: Run Pass1 (keyman only)
         env:
-          DATE:   ${{ inputs.DATE }}
-          PID:    ${{ inputs.PID }}
-          SIMS:   ${{ inputs.SIMS }}
-          TOPN:   ${{ inputs.TOPN }}
-          UNIT:   ${{ inputs.UNIT }}
+          DATE:  ${{ inputs.DATE }}
+          PID:   ${{ inputs.PID }}
+          SIMS:  ${{ inputs.SIMS }}
+          TOPN:  ${{ inputs.TOPN }}
+          UNIT:  ${{ inputs.UNIT }}
           OUTDIR: ${{ inputs.OUTDIR }}
         run: |
           set -euo pipefail
@@ -138,7 +93,6 @@ jobs:
             --predict-only \
             --outdir "$OUTDIR"
 
-      # 2) TENKAI: ML推論（CSVを TENKAI/predictions/v1/<DATE>/<PID>/??R.csv へ）
       - name: Run TENKAI prediction
         env:
           DATE: ${{ inputs.DATE }}
@@ -148,24 +102,22 @@ jobs:
           mkdir -p "TENKAI/predictions/v1/$DATE"
           echo "[tenkai] $DATE / $PID"
           python TENKAI/tenkai_predict_integrated.py \
-            --date "$DATE" --pids "$PID" \
+            --date "$DATE" --pid "$PID" \
             --out "TENKAI/predictions/v1"
 
       - name: Show ML CSVs
         run: |
-          find "TENKAI/predictions/v1/${{ inputs.DATE }}" -maxdepth 2 -type f -name '*.csv' | sort || true
+          find TENKAI/predictions/v1/${{ inputs.DATE }} -maxdepth 2 -type f -name '*.csv' | sort || true
 
-      # 3) Pass2: ML を読み込んで統合 SimS を実行（predict/eval）
       - name: Run Pass2 (SimS integrated with ML)
         env:
-          DATE:   ${{ inputs.DATE }}
-          PID:    ${{ inputs.PID }}
-          MODE:   ${{ inputs.MODE }}
-          SIMS:   ${{ inputs.SIMS }}
-          TOPN:   ${{ inputs.TOPN }}
-          UNIT:   ${{ inputs.UNIT }}
+          DATE:  ${{ inputs.DATE }}
+          PID:   ${{ inputs.PID }}
+          MODE:  ${{ inputs.MODE }}
+          SIMS:  ${{ inputs.SIMS }}
+          TOPN:  ${{ inputs.TOPN }}
+          UNIT:  ${{ inputs.UNIT }}
           OUTDIR: ${{ inputs.OUTDIR }}
-          # parsed filters
           F_REQUIRE_ODDS:   ${{ steps.parse.outputs.F_REQUIRE_ODDS }}
           F_MIN_EV:         ${{ steps.parse.outputs.F_MIN_EV }}
           F_ODDS_BANDS:     ${{ steps.parse.outputs.F_ODDS_BANDS }}
@@ -175,7 +127,6 @@ jobs:
           F_ONLY_FIRST1:    ${{ steps.parse.outputs.F_ONLY_FIRST1 }}
           F_BUY_IN_TOP3:    ${{ steps.parse.outputs.F_BUY_IN_TOP3 }}
           F_BUY_THR:        ${{ steps.parse.outputs.F_BUY_THR }}
-          # parsed keyman
           K_ENABLE: ${{ steps.parse.outputs.K_ENABLE }}
           K_THR:    ${{ steps.parse.outputs.K_THR }}
           K_BOOST:  ${{ steps.parse.outputs.K_BOOST }}
@@ -191,7 +142,6 @@ jobs:
             --ml-root TENKAI/predictions/v1 \
             --outdir $OUTDIR"
 
-          # optional local filters
           [ "${F_EXCLUDE_FIRST1,,}" = "true" ] && ARGS_COMMON="$ARGS_COMMON --exclude-first1"
           [ "${F_ONLY_FIRST1,,}"    = "true" ] && ARGS_COMMON="$ARGS_COMMON --only-first1"
           [ "${F_BUY_IN_TOP3,,}"    = "true" ] && ARGS_COMMON="$ARGS_COMMON --buy-if-keyman-in-top3 --buy-keyman-threshold $F_BUY_THR"
@@ -205,8 +155,6 @@ jobs:
             [ -n "${F_ODDS_MAX}" ]   && [ "$F_ODDS_MAX" != "0" ] && ARGS_FILTER="$ARGS_FILTER --odds-max $F_ODDS_MAX"
             [ "${F_REQUIRE_ODDS,,}" = "true" ] && ARGS_FILTER="$ARGS_FILTER --require-odds"
             [ -n "${F_MIN_EV}" ] && [ "$F_MIN_EV" != "0" ] && ARGS_FILTER="$ARGS_FILTER --min-ev $F_MIN_EV"
-
-            # shellsafe eval to keep quotes in bands
             eval python scripts/sims/sims_integrated.py $ARGS_COMMON \
               --odds-base public/odds/v1 $ARGS_FILTER
           fi
@@ -217,7 +165,7 @@ jobs:
           set -e
           git config user.name  github-actions
           git config user.email github-actions@github.com
-          git add "${{ inputs.OUTDIR }}/pass1" "${{ inputs.OUTDIR }}/pass2" "TENKAI/predictions/v1/${{ inputs.DATE }}" || true
+          git add ${{ inputs.OUTDIR }}/pass1 ${{ inputs.OUTDIR }}/pass2 TENKAI/predictions/v1/${{ inputs.DATE }} || true
           git commit -m "sims_integrated: ${{ inputs.MODE }} DATE=${{ inputs.DATE }} PID=${{ inputs.PID }}" || echo "nothing to commit"
           git push || true
 
