--- a/.github/workflows/sims_integrated.yml
+++ b/.github/workflows/sims_integrated.yml
@@ -3,15 +3,52 @@ name: sims_integrated
 on:
   workflow_dispatch:
     inputs:
-      DATE:   { description: "YYYYMMDD", required: true,  type: string }
-      PID:    { description: "場コード 01..24（カンマ可）", required: true, type: string }
-      MODE:   { description: "predict or eval", required: true, default: "predict", type: choice, options: [predict, eval] }
-      SIMS:   { description: "試行回数/レース", required: true, default: "600", type: string }
-      TOPN:   { description: "三連単 TOPN", required: true, default: "18", type: string }
-      UNIT:   { description: "1点あたり(円)", required: true, default: "100", type: string }
-      FILTERS:{ description: "require_odds=true,min_ev=1.2,odds_bands=01-09,10-19,exclude_first1=true,only_first1=false,buy_in_top3=false,buy_thr=0.7", required: false, default: "", type: string }
-      KEYMAN: { description: "thr=0.7,boost=0.15,aggr=0.0 （無効化は thr=10,boost=0,aggr=0 等）", required: false, default: "thr=0.7,boost=0.15,aggr=0.0", type: string }
-      OUTDIR: { description: "出力ディレクトリ", required: false, default: "scripts/sims", type: string }
+      DATE:
+        description: "YYYYMMDD"
+        required: true
+        type: string
+      PID:
+        description: "場コード 01..24（カンマ可）"
+        required: true
+        type: string
+      MODE:
+        description: "predict or eval"
+        required: true
+        default: "predict"
+        type: choice
+        options:
+          - predict
+          - eval
+      SIMS:
+        description: "試行回数/レース"
+        required: true
+        default: "600"
+        type: string
+      TOPN:
+        description: "三連単 TOPN"
+        required: true
+        default: "18"
+        type: string
+      UNIT:
+        description: "1点あたり(円)"
+        required: true
+        default: "100"
+        type: string
+      FILTERS:
+        description: "例: require_odds=true,min_ev=1.2,odds_bands=01-09,10-19,exclude_first1=true,only_first1=false,buy_in_top3=true,buy_thr=0.7"
+        required: false
+        default: ""
+        type: string
+      KEYMAN:
+        description: "例: enable=true,thr=0.7,boost=0.15,aggr=0.0"
+        required: false
+        default: "enable=true,thr=0.7,boost=0.15,aggr=0.0"
+        type: string
+      OUTDIR:
+        description: "出力ディレクトリ"
+        required: false
+        default: "scripts/sims"
+        type: string
 
 permissions:
   contents: write
@@ -45,7 +82,9 @@ jobs:
           KEYMAN:  ${{ inputs.KEYMAN }}
         run: |
           set -euo pipefail
+
           parse_kvlist () {
+            # $1: "a=1,b=2", $2: prefix ("F_" / "K_")
             local s="$1"; local prefix="$2"
             IFS=',' read -r -a pairs <<< "$s"
             for kv in "${pairs[@]}"; do
@@ -54,24 +93,32 @@ jobs:
               if [[ "$kv" == *"="* ]]; then
                 k="$(echo "${kv%%=*}" | tr '[:lower:]' '[:upper:]' | tr -c 'A-Z0-9_' '_' | xargs)"
                 v="$(echo "${kv#*=}" | xargs)"
-                echo "$prefix$k=$v" >> $GITHUB_OUTPUT
+                echo "$prefix$k=$v" >> "$GITHUB_OUTPUT"
               fi
             done
           }
+
           # FILTERS defaults
-          echo "F_REQUIRE_ODDS=false"   >> $GITHUB_OUTPUT
-          echo "F_MIN_EV=0"            >> $GITHUB_OUTPUT
-          echo "F_ODDS_BANDS="         >> $GITHUB_OUTPUT
-          echo "F_ODDS_MIN=0"          >> $GITHUB_OUTPUT
-          echo "F_ODDS_MAX=0"          >> $GITHUB_OUTPUT
-          echo "F_EXCLUDE_FIRST1=false">> $GITHUB_OUTPUT
-          echo "F_ONLY_FIRST1=false"   >> $GITHUB_OUTPUT
-          echo "F_BUY_IN_TOP3=false"   >> $GITHUB_OUTPUT
-          echo "F_BUY_THR=0.7"         >> $GITHUB_OUTPUT
+          {
+            echo "F_REQUIRE_ODDS=false"
+            echo "F_MIN_EV=0"
+            echo "F_ODDS_BANDS="
+            echo "F_ODDS_MIN=0"
+            echo "F_ODDS_MAX=0"
+            echo "F_EXCLUDE_FIRST1=false"
+            echo "F_ONLY_FIRST1=false"
+            echo "F_BUY_IN_TOP3=false"
+            echo "F_BUY_THR=0.7"
+          } >> "$GITHUB_OUTPUT"
+
           # KEYMAN defaults
-          echo "K_THR=0.7"   >> $GITHUB_OUTPUT
-          echo "K_BOOST=0.15">> $GITHUB_OUTPUT
-          echo "K_AGGR=0.0"  >> $GITHUB_OUTPUT
+          {
+            echo "K_ENABLE=true"
+            echo "K_THR=0.7"
+            echo "K_BOOST=0.15"
+            echo "K_AGGR=0.0"
+          } >> "$GITHUB_OUTPUT"
+
           [ -n "${FILTERS:-}" ] && parse_kvlist "$FILTERS" "F_"
           [ -n "${KEYMAN:-}" ]  && parse_kvlist "$KEYMAN"  "K_"
 
@@ -95,7 +142,7 @@ jobs:
             --predict-only \
             --outdir "$OUTDIR"
 
-      # 2) ML推論（TENKAI）
+      # 2) ML推論（TENKAI）— 出力: TENKAI/predictions/v1/<DATE>/<pid>/<race>.csv
       - name: Run TENKAI prediction
         env:
           DATE: ${{ inputs.DATE }}
@@ -104,13 +151,14 @@ jobs:
           set -euo pipefail
           mkdir -p "TENKAI/predictions/v1/$DATE"
           echo "[tenkai] $DATE / $PID"
-          python TENKAI/tenkai_predict_integrated.py --date "$DATE" --pid "$PID"
+          python TENKAI/tenkai_predict_integrated.py \
+            --date "$DATE" --pid "$PID"
 
       - name: Show ML CSVs
         run: |
           find TENKAI/predictions/v1/${{ inputs.DATE }} -maxdepth 2 -type f -name '*.csv' | sort || true
 
-      # 3) Pass2: ML統合SimS
+      # 3) Pass2: ML を読み込んだ統合 SimS
       - name: Run Pass2 (SimS integrated with ML)
         env:
           DATE:  ${{ inputs.DATE }}
@@ -119,7 +167,7 @@ jobs:
           SIMS:  ${{ inputs.SIMS }}
           TOPN:  ${{ inputs.TOPN }}
           OUTDIR: ${{ inputs.OUTDIR }}
-          # parsed FILTERS
+          # parsed filters
           F_REQUIRE_ODDS:   ${{ steps.parse.outputs.F_REQUIRE_ODDS }}
           F_MIN_EV:         ${{ steps.parse.outputs.F_MIN_EV }}
           F_ODDS_BANDS:     ${{ steps.parse.outputs.F_ODDS_BANDS }}
@@ -129,13 +177,21 @@ jobs:
           F_ONLY_FIRST1:    ${{ steps.parse.outputs.F_ONLY_FIRST1 }}
           F_BUY_IN_TOP3:    ${{ steps.parse.outputs.F_BUY_IN_TOP3 }}
           F_BUY_THR:        ${{ steps.parse.outputs.F_BUY_THR }}
-          # parsed KEYMAN
-          K_THR:   ${{ steps.parse.outputs.K_THR }}
-          K_BOOST: ${{ steps.parse.outputs.K_BOOST }}
-          K_AGGR:  ${{ steps.parse.outputs.K_AGGR }}
+          # parsed keyman
+          K_ENABLE: ${{ steps.parse.outputs.K_ENABLE }}
+          K_THR:    ${{ steps.parse.outputs.K_THR }}
+          K_BOOST:  ${{ steps.parse.outputs.K_BOOST }}
+          K_AGGR:   ${{ steps.parse.outputs.K_AGGR }}
         run: |
           set -euo pipefail
-          echo "[pass2] MODE=$MODE  DATE=$DATE PID=$PID"
+          echo "[pass2] MODE=$MODE DATE=$DATE PID=$PID"
+
+          # KEYMAN disable 時はしきい値を上げ、boost/aggr=0 にして実質無効化
+          if [[ "${K_ENABLE,,}" == "false" ]]; then
+            K_THR=9.9
+            K_BOOST=0
+            K_AGGR=0
+          fi
 
           ARGS_COMMON="--base public --dates $DATE --pids $PID \
             --sims $SIMS --strategy trifecta_topN --topn $TOPN \
@@ -143,20 +199,22 @@ jobs:
             --ml-root TENKAI/predictions/v1 \
             --outdir $OUTDIR"
 
-          # optional filters
-          [ "${F_EXCLUDE_FIRST1,,}" = "true" ] && ARGS_COMMON="$ARGS_COMMON --exclude-first1"
-          [ "${F_ONLY_FIRST1,,}"    = "true" ] && ARGS_COMMON="$ARGS_COMMON --only-first1"
-          [ "${F_BUY_IN_TOP3,,}"    = "true" ] && ARGS_COMMON="$ARGS_COMMON --buy-if-keyman-in-top3 --buy-keyman-threshold $F_BUY_THR"
+          # optional switches
+          if [[ "${F_EXCLUDE_FIRST1,,}" == "true" ]]; then ARGS_COMMON="$ARGS_COMMON --exclude-first1"; fi
+          if [[ "${F_ONLY_FIRST1,,}"    == "true" ]]; then ARGS_COMMON="$ARGS_COMMON --only-first1"; fi
+          if [[ "${F_BUY_IN_TOP3,,}"    == "true" ]]; then ARGS_COMMON="$ARGS_COMMON --buy-if-keyman-in-top3 --buy-keyman-threshold $F_BUY_THR"; fi
 
-          if [ "$MODE" = "predict" ]; then
+          if [[ "$MODE" == "predict" ]]; then
             python scripts/sims/sims_integrated.py $ARGS_COMMON --predict-only
           else
             ARGS_FILTER=""
-            [ -n "${F_ODDS_BANDS}" ] && ARGS_FILTER="$ARGS_FILTER --odds-bands \"$F_ODDS_BANDS\""
-            [ -n "${F_ODDS_MIN}" ]   && [ "$F_ODDS_MIN" != "0" ] && ARGS_FILTER="$ARGS_FILTER --odds-min $F_ODDS_MIN"
-            [ -n "${F_ODDS_MAX}" ]   && [ "$F_ODDS_MAX" != "0" ] && ARGS_FILTER="$ARGS_FILTER --odds-max $F_ODDS_MAX"
-            [ "${F_REQUIRE_ODDS,,}" = "true" ] && ARGS_FILTER="$ARGS_FILTER --require-odds"
-            [ -n "${F_MIN_EV}" ] && [ "$F_MIN_EV" != "0" ] && ARGS_FILTER="$ARGS_FILTER --min-ev $F_MIN_EV"
+            [[ -n "${F_ODDS_BANDS}" ]] && ARGS_FILTER="$ARGS_FILTER --odds-bands \"$F_ODDS_BANDS\""
+            [[ -n "${F_ODDS_MIN}"   && "$F_ODDS_MIN" != "0" ]] && ARGS_FILTER="$ARGS_FILTER --odds-min $F_ODDS_MIN"
+            [[ -n "${F_ODDS_MAX}"   && "$F_ODDS_MAX" != "0" ]] && ARGS_FILTER="$ARGS_FILTER --odds-max $F_ODDS_MAX"
+            [[ "${F_REQUIRE_ODDS,,}" == "true" ]] && ARGS_FILTER="$ARGS_FILTER --require-odds"
+            [[ -n "${F_MIN_EV}" && "$F_MIN_EV" != "0" ]] && ARGS_FILTER="$ARGS_FILTER --min-ev $F_MIN_EV"
+
+            # keep quotes in bands
             eval python scripts/sims/sims_integrated.py $ARGS_COMMON --odds-base public/odds/v1 $ARGS_FILTER
           fi
 
